Fix some linting and dupes.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/duckduckgo/catppuccin.user.less
+++ b/styles/duckduckgo/catppuccin.user.less
@@ -177,7 +177,6 @@
 
     --theme-assist-bg-chat-system: @mantle !important;
     // --theme-assist-button-border-color
-    --sds-color-palette-blue-tint-15: darken(@blue, 5%) !important;
     --theme-assist-bg-opt-in: @mantle !important;
     --sds-color-palette-blue-tint-15: @blue; // --theme-assist-bg-opt-in-border
     --theme-assist-gradient-stop: @accent !important;
@@ -185,8 +184,6 @@
     --sds-color-palette-tint-09: red !important;
     // --theme-assist-bg-icon
     --sds-color-palette-shade-36: blue !important;
-    // --theme-assist-txt-link
-    --sds-color-text-accent-01: @blue !important;
     // --theme-assist-error-bg
     --sds-color-palette-tint-03: fade(@red, 30%) !important;
     // --theme-assist-error-border
@@ -264,7 +261,6 @@
     --sds-color-border-accent-01: @accent !important;
     --sds-color-palette-gray-40: @text !important; // Text
     --sds-color-palette-gray-50: @overlay0 !important; // Switch Toggle
-    --sds-color-palette-gray-60: @accent !important; // Accented text
     --sds-color-palette-gray-85: @surface1 !important; // Surface element
     --sds-color-palette-green-50: @green !important;
     --sds-color-palette-green-60: @green !important;
@@ -402,8 +398,6 @@
     --theme-body-text-color: @text !important;
     --theme-table-border-line: @overlay0 !important;
 
-    --theme-assist-bg-chat-system: @mantle !important;
-    --theme-assist-gradient-stop: @mantle !important;
     --theme-atb-button-bg: @blue !important;
     --theme-atb-button-bg--active: @blue !important;
     --theme-atb-button-bg--hover: @blue !important;
@@ -584,8 +578,10 @@
     --theme-button-about-timeline-bg--hover: @surface1 !important;
     --theme-button-about-timeline-bg--active: @accent !important;
 
-    --theme-card-dismiss-bg:  !important;
-    --theme-card-dismiss-bg--hover:  !important;
+    --color-violet70: fade(@mauve, 50%) !important; // HIRING INFO PANELS
+    --color-violet100: fade(@mauve, 30%) !important; // JOB POSITIONS PANELS
+    --theme-card-dismiss-bg: @surface1 !important;
+    --theme-card-dismiss-bg--hover: @surface2 !important;
 
     --theme-checkbox-bg: transparent !important;
     --theme-checkbox-bg--checked: @accent !important;
@@ -1045,7 +1041,7 @@
         @dark-blue: darken(@blue, 10%);
         @darker-blue: darken(@blue, 20%);
         @svg: escape(
-          '<svg fill="none" height="80" viewBox="10 18 80 51.2" width="100" xmlns="http://www.w3.org/2000/svg"><g clip-rule="evenodd" fill-rule="evenodd"><g fill="@{text}"><path d="M60 39a3 3 0 0 0 3 3h-1v28a4 4 0 0 0 4 4h18a4 4 0 0 0 4-4V42h-1a3 3 0 1 0 0-6H63a3 3 0 0 0-3 3m-20 4a3 3 0 0 1-3 3h1v24a4 4 0 0 1-4 4H16a4 4 0 0 1-4-4V46h1a3 3 0 1 1 0-6h24a3 3 0 0 1 3 3" opacity=".3"/><path d="M81.35 10.83a1.5 1.5 0 0 1-.672 2.012l-6.008 3a1.5 1.5 0 1 1-1.34-2.684l6.008-3a1.5 1.5 0 0 1 2.012.672M75.504 23a1.5 1.5 0 0 1 1.5-1.5h7.009a1.5 1.5 0 0 1 0 3h-7.01a1.5 1.5 0 0 1-1.5-1.5M19.65 10.83a1.5 1.5 0 0 1 2.013-.672l6.007 3a1.5 1.5 0 1 1-1.34 2.684l-6.008-3a1.5 1.5 0 0 1-.671-2.012M15.486 23a1.5 1.5 0 0 1 1.5-1.5h7.01a1.5 1.5 0 1 1 0 3h-7.01a1.5 1.5 0 0 1-1.5-1.5" opacity=".6"/></g><path d="M77 40H23a3 3 0 0 1-3-3v-2a3 3 0 0 1 3-3h54a3 3 0 0 1 3 3v2a3 3 0 0 1-3 3m-5 34H28a4 4 0 0 1-4-4V40h52v30a4 4 0 0 1-4 4" fill="@{blue}"/><path d="M24 46h52v-6H24z" fill="@{dark-blue}"/><path d="M60 28h-4v-4c0-2.206 1.795-4 4-4s4 1.794 4 4-1.794 4-4 4m-16 0h-4c-2.206 0-4-1.794-4-4s1.794-4 4-4 4 1.794 4 4zm16-12a8 8 0 0 0-8 8v4h-4v-4a8 8 0 1 0-8 8h6v42h8V32h6a8 8 0 0 0 0-16" fill="@{dark-blue}"/><path d="M30 46h4V32h-4z" fill="@{accent}"/><path d="M35 58h-6a1 1 0 0 1-1-1V47a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1" fill="@{accent}"/></g></svg>'
+          '<svg fill="none" height="80" viewBox="10 18 80 51.2" width="100" xmlns="http://www.w3.org/2000/svg"><g clip-rule="evenodd" fill-rule="evenodd"><g fill="@{text}"><path d="M60 39a3 3 0 0 0 3 3h-1v28a4 4 0 0 0 4 4h18a4 4 0 0 0 4-4V42h-1a3 3 0 1 0 0-6H63a3 3 0 0 0-3 3m-20 4a3 3 0 0 1-3 3h1v24a4 4 0 0 1-4 4H16a4 4 0 0 1-4-4V46h1a3 3 0 1 1 0-6h24a3 3 0 0 1 3 3" opacity=".3"/><path d="M81.35 10.83a1.5 1.5 0 0 1-.672 2.012l-6.008 3a1.5 1.5 0 1 1-1.34-2.684l6.008-3a1.5 1.5 0 0 1 2.012.672M75.504 23a1.5 1.5 0 0 1 1.5-1.5h7.009a1.5 1.5 0 0 1 0 3h-7.01a1.5 1.5 0 0 1-1.5-1.5M19.65 10.83a1.5 1.5 0 0 1 2.013-.672l6.007 3a1.5 1.5 0 1 1-1.34 2.684l-6.008-3a1.5 1.5 0 0 1-.671-2.012M15.486 23a1.5 1.5 0 0 1 1.5-1.5h7.01a1.5 1.5 0 1 1 0 3h-7.01a1.5 1.5 0 0 1-1.5-1.5" opacity=".6"/></g><path d="M77 40H23a3 3 0 0 1-3-3v-2a3 3 0 0 1 3-3h54a3 3 0 0 1 3 3v2a3 3 0 0 1-3 3m-5 34H28a4 4 0 0 1-4-4V40h52v30a4 4 0 0 1-4 4" fill="@{blue}"/><path d="M24 46h52v-6H24z" fill="@{dark-blue}"/><path d="M60 28h-4v-4c0-2.206 1.795-4 4-4s4 1.794 4 4-1.794 4-4 4m-16 0h-4c-2.206 0-4-1.794-4-4s1.794-4 4-4 4 1.794 4 4zm16-12a8 8 0 0 0-8 8v4h-4v-4a8 8 0 1 0-8 8h6v42h8V32h6a8 8 0 0 0 0-16" fill="@{dark-blue}"/><path d="M30 46h4V32h-4zm5 12h-6a1 1 0 0 1-1-1V47a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1" fill="@{accent}"/></g></svg>'
         );
         content: url("data:image/svg+xml, @{svg}") !important;
       }
@@ -1555,6 +1551,10 @@
     }
 
     /* ai chat >:( */
+    .PpfbbqAdZ5YydaH2dEXp textarea {
+      border-radius: inherit !important;
+    }
+
     .feedback-external__link {
       color: @blue;
     }
