Expand on this comment - it's actually the search assist panel gradient
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/duckduckgo/catppuccin.user.less
+++ b/styles/duckduckgo/catppuccin.user.less
@@ -159,7 +159,7 @@
     --sds-color-palette-purple-10: @mauve !important;
     --sds-color-palette-red-10: @peach !important;
 
-    // Button border gradient
+    // Search assist panel gradient
     --sds-color-palette-blue-70: darken(@blue, 5%) !important;
     --sds-color-palette-purple-50: darken(@mauve, 5%) !important;
     --sds-color-palette-red-70: darken(@peach, 5%) !important;
