--- a/styles/discourse/catppuccin.user.less
+++ b/styles/discourse/catppuccin.user.less
@@ -30,22 +30,23 @@
     #catppuccin(@darkFlavor);
   }
 
-  #w-rgb(@id,
-  @color) {
+  #w-rgb(@id, @color) {
     --@{id}: @color;
     --@{id}-rgb: #lib.rgbify(@color)[];
   }
 
-  #w-hover(@id,
-  @color) {
+  #w-hover(@id, @color, @hover) {
     --@{id}: @color;
-    --@{id}-hover: lighten(@color, @hover);
+    --@{id}-hover: darken(@color, @hover);
   }
 
   #catppuccin(@flavor) {
     #lib.palette();
 
-    @hover: 10%;
+    // darken percentages
+    @hover: 5%;
+    @active: 10%;
+    @visited: 15%;
 
     @veryLow: 8%;
     @low: 24%;
@@ -55,12 +56,17 @@
 
     a {
       color: @accent;
-      &:visited {
-        color: @accent;
-      }
 
       &:hover {
-        color: @accent;
+        color: darken(@accent, @hover);
+      }
+
+      &:active, &:focus {
+        color: darken(@accent, @active);
+      }
+
+      &:visited {
+        color: darken(@accent, @visited);
       }
     }
 
@@ -78,20 +84,34 @@
 
       --scheme-type: dark;
 
-      #w-rgb(primary,
-      @text); // primary-50
-      #w-rgb(primary-very-low,
-      @surface0); // primary-200
-      #w-rgb(primary-low,
-      @surface2); // primary-400
-      #w-rgb(primary-low-mid,
-      @overlay1); // primary-600
-      #w-rgb(primary-medium,
-      @subtext0); // primary-800
-      #w-rgb(primary-high,
-      @text); // primary-900
-      #w-rgb(primary-very-high,
-      @text);
+      #w-rgb(primary, @text);
+
+      // primary-50
+      #w-rgb(primary-very-low, @surface0);
+
+      // primary-200
+      #w-rgb(primary-low, @surface2);
+
+      // primary-400
+      #w-rgb(primary-low-mid, @overlay1);
+
+      // primary-600
+      #w-rgb(primary-medium, @subtext0);
+
+      // primary-800
+      #w-rgb(primary-high, @text);
+
+      // primary-900
+      #w-rgb(primary-very-high, @text);
+
+      // used for active element gradients etc.
+      --primary-rgb: darken(@accent, @active);
+      --secondary-rgb: @overlay1;
+      --tertiary-rgb: @accent;
+      --highlight-rgb: @accent;
+      --header_background-rgb: @accent;
+      --always-black-rgb: @crust;
+      --success-rgb: @green;
 
       --primary-50: @surface0;
       --primary-100: @surface1;
@@ -107,8 +127,7 @@
       --primary-or-primary-low-mid: var(--primary-low-mid);
 
 
-      #w-rgb(secondary,
-      @base);
+      #w-rgb(secondary, @base);
       --secondary-low: @subtext0;
       --secondary-medium: @overlay1;
       --secondary-high: @surface2;
@@ -120,14 +139,13 @@
       --primary-low-mid-or-secondary-high: var(--secondary-high);
       --primary-low-mid-or-secondary-low: var(--secondary-low);
 
-      #w-rgb(tertiary,
-      @accent);
+      #w-rgb(tertiary, @accent);
       --tertiary-very-low: var(--tertiary-50);
       --tertiary-low: var(--tertiary-300);
       --tertiary-medium: var(--tertiary-600);
       --tertiary-high: var(--tertiary-900);
 
-      --tertiary-hover: lighten(@accent, @hover);
+      --tertiary-hover: darken(@accent, @hover);
 
       --tertiary-25: mix(@accent, @base, (7% * 4)-28%);
       --tertiary-50: mix(@accent, @base, (9% * 4)-28%);
@@ -169,12 +187,12 @@
       --danger-low: mix(@red, @base, @low);
       --danger-low-mid: fade(mix(@red, @base, @low), 70%);
       --danger-medium: mix(@red, @base, @medium);
-      --danger-hover: lighten(@red, @hover);
+      --danger-hover: darken(@red, @hover);
 
       --success: @green;
       --success-low: mix(@green, @base, @low);
       --success-medium: mix(@green, @base, @medium);
-      --success-hover: lighten(@green, @hover);
+      --success-hover: darken(@green, @hover);
 
       --love: @red;
       --love-low: mix(@red, @base, @low);
@@ -188,24 +206,17 @@
       --highlight-low-or-medium: var(--highlight-medium);
 
       --secondary-or-primary: var(--primary);
-      --tertiary-or-white: #fff;
-      --facebook-or-white: #fff;
-      --twitter-or-white: #fff;
+      --tertiary-or-white: @accent;
+      --facebook-or-white: @blue;
+      --twitter-or-white: @sapphire;
 
-      #w-hover(google,
-      #fff);
-      #w-hover(instagram,
-      #e1306c);
-      #w-hover(facebook,
-      #0866ff);
-      #w-hover(cas,
-      #70ba61);
-      #w-hover(twitter,
-      #000);
-      #w-hover(github,
-      #100e0f);
-      #w-hover(discord,
-      #7289da);
+      #w-hover(google, @text, @hover);
+      #w-hover(instagram, @red, @hover);
+      #w-hover(facebook, @blue, @hover);
+      #w-hover(cas, @green, @hover);
+      #w-hover(twitter, @sapphire, @hover);
+      #w-hover(github, @mauve, @hover);
+      #w-hover(discord, @lavender, @hover);
 
       --gold: @yellow;
       --silver: @subtext1;
@@ -239,8 +250,6 @@
         content: url("data:image/svg+xml,@{svg}") !important;
       }
 
-
-
       @heatmap-base: @peach;
 
       .heatmap-high,
@@ -262,7 +271,9 @@
       .heatmap-low .d-icon,
       .heatmap-low .d-button-label {
         color: fade(@heatmap-base, 60%) !important;
-      } // Last visit lines
+      }
+
+      // Last visit lines
       .topic-list .topic-list-item-separator td,
       .small-action.topic-post-visited .topic-post-visited-line {
         border-color: var(--tertiary);
@@ -276,7 +287,9 @@
 
       .topic-list .topic-list-item-separator .topic-list-data {
         border-color: var(--tertiary);
-      } // Topic Status Button
+      }
+
+      // Topic Status Button
       .topic-status-btn-open,
       .topic-status-btn-needs-information,
       .topic-status-btn-fixed,
@@ -326,18 +339,10 @@
     #catppuccin(@darkFlavor);
   }
 
-  #w-rgb(@id, @color) {
-    --@{id}: @color;
-    --@{id}-rgb: #lib.rgbify(@color)[];
-  }
-
-  #w-hover(@id, @color) {
-    --@{id}: @color;
-    --@{id}-hover: lighten(@color, @hover);
-  }
-
   #catppuccin(@flavor) {
-    #lib.palette(); // RBX branding
+    #lib.palette();
+
+    // RBX branding
     #site-logo {
       filter: @text-filter;
     }
