Push some specificity about the tables. Add arch-bio-entry formatting.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -16,7 +16,7 @@
 ==/UserStyle== */
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
-@import "https://userstyles.catppuccin.com/lib/mediawiki.less";
+@import "http://127.0.0.1:8000/catppuccin-styles/userstyles/lib/mediawiki.less";
 
 /// General Mixins
 #mixins {
@@ -194,36 +194,32 @@
       background-color: @mantle !important;
       border-color: @overlay0 !important;
 
-      tr {
+      tr, &.head tr {
         border-color: @overlay0 !important;
 
-        &:nth-child(odd) td,
-        .rowodd td {
+        > th {
+          background-color: @mantle !important;
+          border-color: @overlay0 !important;
+        }
+
+        td {
+          border-color: @overlay0 !important;
+        }
+
+        &:nth-child(odd) > td,
+        .rowodd > td {
           background-color: @surface0 !important;
         }
 
-        &:nth-child(even) td,
-        .roweven td {
+        &:nth-child(even) > td,
+        .roweven > td {
           background-color: @base !important;
         }
 
         &:hover,
-        &:hover td {
+        &:hover > td {
           background-color: @surface2 !important;
         }
-      }
-
-      td {
-        border-color: @overlay0 !important;
-      }
-
-      th {
-        background-color: @mantle !important;
-        border-color: @overlay0 !important;
-      }
-
-      &.head tr {
-        border-color: @overlay0 !important;
       }
     }
   }
@@ -315,6 +311,29 @@
       &.active {
         background-color: @mantle !important;
         border-bottom-color: transparent !important;
+      }
+    }
+
+    table.arch-bio-entry {
+      td {
+        &.pic img {
+            border-color: @overlay0;
+        }
+
+        h3 {
+          border-color: @overlay1;
+        }
+      }
+
+       > tbody > tr:hover > td {
+        background: @mantle !important;
+      }
+
+      table.bio {
+        th {
+          color: @subtext0;
+          background-color: inherit !important;
+        }
       }
     }
 
@@ -430,8 +449,8 @@
         }
       }
 
-      tr {
-        td.diff-addedline {
+      tr > td {
+        &.diff-addedline {
           border-color: @green !important;
 
           .diffchange {
@@ -441,7 +460,7 @@
           }
         }
 
-        .diff-deletedline {
+        &.diff-deletedline {
           border-color: @red !important;
 
           .diffchange {
@@ -829,24 +848,24 @@
           border-color: @overlay0 !important;
 
           tr,
-          tr td {
+          tr > td {
             background-color: @mantle !important;
             border-color: @overlay0 !important;
 
             &:hover {
               background-color: @mantle !important;
             }
-          }
 
-          td.linenumbers,
-          td.linenumbers a {
-            color: @overlay1 !important;
+            &.linenumbers,
+            &.linenumbers a {
+              color: @overlay1 !important;
+            }
           }
         }
 
         &#header {
           tr,
-          tr td {
+          tr > td {
             background-color: @base !important;
             border-color: @overlay0 !important;
 
@@ -863,7 +882,7 @@
         &.tabs {
           border-color: @blue !important;
 
-          tr td {
+          tr > td {
             background-color: @surface0 !important;
 
             &:hover {
@@ -890,7 +909,7 @@
           }
 
           tr,
-          tr td {
+          tr > td {
             background-color: @mantle !important;
 
             &:hover {
@@ -898,7 +917,7 @@
             }
           }
 
-          tr td {
+          tr > td {
             a {
               text-decoration: underline !important;
             }
@@ -1007,7 +1026,7 @@
         color: @subtext0 !important;
       }
 
-      .stats tr td.sum {
+      .stats tr > td.sum {
         color: @red !important;
       }
 
@@ -1924,7 +1943,7 @@
       table {
         background-color: @mantle !important;
 
-        tr, tr:hover, :is(tr, tr:hover) td, :is(tr, tr:hover) td code {
+        tr, tr:hover, :is(tr, tr:hover) > td, :is(tr, tr:hover) > td code {
           background-color: @mantle !important;
         }
       }
