--- a/styles/openstreetmap/catppuccin.user.less
+++ b/styles/openstreetmap/catppuccin.user.less
@@ -37,5 +37,73 @@
   #catppuccin(@flavor) {
     #lib.palette();
     #lib.defaults();
+
+    --bs-body-color: #dee2e6;
+    --bs-body-color-rgb: 222, 226, 230;
+    --bs-body-bg: #212529;
+    --bs-body-bg-rgb: 33, 37, 41;
+    --bs-emphasis-color: #fff;
+    --bs-emphasis-color-rgb: 255, 255, 255;
+    --bs-secondary-color: rgba(222, 226, 230, 0.75);
+    --bs-secondary-color-rgb: 222, 226, 230;
+    --bs-secondary-bg: #343a40;
+    --bs-secondary-bg-rgb: 52, 58, 64;
+    --bs-tertiary-color: rgba(222, 226, 230, 0.5);
+    --bs-tertiary-color-rgb: 222, 226, 230;
+    --bs-tertiary-bg: #2b3035;
+    --bs-tertiary-bg-rgb: 43, 48, 53;
+    --bs-primary-text-emphasis: #a9beff;
+    --bs-secondary-text-emphasis: #b8b8b8;
+    --bs-success-text-emphasis: @green;
+    --bs-info-text-emphasis: #6edff6;
+    --bs-warning-text-emphasis: #ffda6a;
+    --bs-danger-text-emphasis: #ea868f;
+    --bs-light-text-emphasis: #f8f9fa;
+    --bs-dark-text-emphasis: #dee2e6;
+    --bs-primary-bg-subtle: #161d33;
+    --bs-secondary-bg-subtle: #1b1b1b;
+    --bs-success-bg-subtle: #192616;
+    --bs-info-bg-subtle: #032830;
+    --bs-warning-bg-subtle: #332701;
+    --bs-danger-bg-subtle: #2c0b0e;
+    --bs-light-bg-subtle: #343a40;
+    --bs-dark-bg-subtle: #1a1d20;
+    --bs-primary-border-subtle: #435899;
+    --bs-secondary-border-subtle: #525252;
+    --bs-success-border-subtle: #4c7143;
+    --bs-info-border-subtle: #087990;
+    --bs-warning-border-subtle: #997404;
+    --bs-danger-border-subtle: #842029;
+    --bs-light-border-subtle: #495057;
+    --bs-dark-border-subtle: #343a40;
+    --bs-heading-color: inherit;
+    --bs-link-color: #a9beff;
+    --bs-link-hover-color: #bacbff;
+    --bs-link-color-rgb: 169, 190, 255;
+    --bs-link-hover-color-rgb: 186, 203, 255;
+    --bs-code-color: #e685b5;
+    --bs-highlight-color: #dee2e6;
+    --bs-highlight-bg: #664d03;
+    --bs-border-color: #495057;
+    --bs-border-color-translucent: rgba(255, 255, 255, 0.15);
+    --bs-form-valid-color: @green;
+    --bs-form-valid-border-color: @green;
+    --bs-form-invalid-color: #ea868f;
+    --bs-form-invalid-border-color: #ea868f
+
+    nav.primary #edit_tab .btn-outline-primary {
+      --bs-btn-color: @green !important;
+      --bs-btn-border-color: @green !important;
+      --bs-btn-hover-color: @base !important;
+      --bs-btn-hover-bg: @green !important;
+      --bs-btn-hover-border-color: @green !important;
+      --bs-btn-focus-shadow-rgb: 126, 188, 111;
+      --bs-btn-active-color: @base !important;
+      --bs-btn-active-bg: @green !important;
+      --bs-btn-active-border-color: @green !important;
+      --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+      --bs-btn-disabled-color: @green !important;
+      --bs-btn-disabled-border-color: @green !important;
+    }
   }
 }
