feat: lots of theming

--- a/styles/progress-learning/catppuccin.user.less
+++ b/styles/progress-learning/catppuccin.user.less
@@ -37,5 +37,65 @@
   #catppuccin(@flavor) {
     #lib.palette();
     #lib.defaults();
+
+    *, ::after, ::before, .divide-gray-200 {
+      border-color: @surface0 !important;
+    }
+
+    .bg-white, .bg-gray-100, {
+      background-color: @mantle;
+    }
+
+    .bg-brand-secondary-600 {
+      background-color: @base;
+    }
+
+    .bg-blues {
+      background-color: @blue;
+    }
+
+    .bg-site-orange {
+      background-color: @peach !important;
+    }
+
+    .bg-brand-primary, .bg-brand-primary-400, .hover\:bg-brand-primary:hover {
+      background-color: @mauve !important;
+    }
+
+    .bg-brand-secondary-700, .bg-brand-secondary-400, .hover\:bg-brand-secondary-300\/20:hover {
+      background-color: @blue;
+    }
+
+    .text-white, .text-gray-600, .text-gray-700, .text-gray-800 {
+      color: @text;
+    }
+
+    .text-gray-500 {
+      color: @subtext0;
+    }
+
+    button[class*="text-white"], li[class*="text-white"] {
+      color: @base;
+    }
+
+    .hover\:text-gray-100:hover {
+      color: @base;
+    }
+
+    .text-brand-primary-700 {
+      color: @mauve;
+    }
+
+    svg g[stroke="#fff"], svg line[stroke="#fff"], svg path[stroke="#fff"] {
+      stroke: @base;
+    }
+
+    path[fill="#ab1484"], path[fill="#cc0ca4"] {
+      fill: @mauve;
+    }
+
+    path[fill="#0494bc"], path[fill="#04749c"], path[fill="#047c9c"] {
+      fill: @blue;
+    }
   }
 }
