feat: more theming

--- a/styles/progress-learning/catppuccin.user.less
+++ b/styles/progress-learning/catppuccin.user.less
@@ -42,7 +42,7 @@
       border-color: @surface0 !important;
     }
 
-    .bg-white, .bg-gray-100, {
+    .bg-white, .bg-gray-100, .lrn-assess, .MS-Wrapper .lrn-group-top {
       background-color: @mantle;
     }
 
@@ -58,7 +58,7 @@
       background-color: @peach !important;
     }
 
-    .bg-brand-primary, .bg-brand-primary-400, .hover\:bg-brand-primary:hover {
+    .bg-brand-primary, .bg-brand-primary-400, .hover\:bg-brand-primary:hover, .MS-Wrapper .lrn-assess .items .progress span {
       background-color: @mauve !important;
     }
 
@@ -66,8 +66,39 @@
       background-color: @blue;
     }
 
-    .text-white, .text-gray-600, .text-gray-700, .text-gray-800 {
+    .bg-gray-200 {
+      background-color: @base;
+    }
+
+    .bg-gray-200:hover {
+      background-color: lighten(@base, 10%);
+    }
+
+    .lrn-assess .items .progress {
+      background-color: @overlay0;
+    }
+
+    .lrn-assess .item-count, .lrn-assess .timer {
       color: @text;
+    }
+
+    div[style="background: rgb(0, 162, 212); font-size: 13px;"] {
+      background: @blue !important;
+      color: @base
+    }
+
+    div[style="background: rgb(255, 190, 65); font-size: 13px;"] {
+      background: @peach !important;
+      color: @base
+    }
+
+    div[style="background: rgb(209, 213, 219); font-size: 13px;"] {
+      background: @base !important;
+      color: @text;
+    }
+
+    .text-white, .text-gray-600, .text-gray-700, .text-gray-800, .lrn {
+      color: @text !important;
     }
 
     .text-gray-500 {
@@ -76,6 +107,14 @@
 
     button[class*="text-white"], li[class*="text-white"] {
       color: @base;
+    }
+
+    .MS-Wrapper .lrn.lrn-assess:not([class*="access-contrast-"]) .lrn_btn_blue {
+      background-color: @blue !important;
+    }
+
+    .MS-Wrapper .lrn.lrn-assess:not([class*="access-contrast-"]) .lrn_btn_blue:hover {
+      background-color: @sapphire !important;
     }
 
     .hover\:text-gray-100:hover {
