feat: practice page theming

--- a/styles/ixl/catppuccin.user.less
+++ b/styles/ixl/catppuccin.user.less
@@ -337,5 +337,13 @@
     .statistic-container.challenge .break-link a, .statistic-container.smartscore .break-link a  {
       color: @blue;
     }
+
+    .multipart-indicator-container .multipart-indicator.multipart-indicator-remaining {
+      background-color: @text;
+    }
+
+    .multipart-indicator-container .multipart-indicator.multipart-indicator-progress {
+      background-color: @peach;
+    }
   }
 }
