fix: change circle from text to mantle

--- a/styles/ixl/catppuccin.user.less
+++ b/styles/ixl/catppuccin.user.less
@@ -339,7 +339,7 @@
     }
 
     .multipart-indicator-container .multipart-indicator.multipart-indicator-remaining {
-      background-color: @text;
+      background-color: @mantle;
     }
 
     .multipart-indicator-container .multipart-indicator.multipart-indicator-progress {
