--- a/styles/openstreetmap/catppuccin.user.less
+++ b/styles/openstreetmap/catppuccin.user.less
@@ -38,16 +38,16 @@
     #lib.palette();
     #lib.defaults();
 
-    --bs-body-color: #dee2e6;
-    --bs-body-color-rgb: 222, 226, 230;
-    --bs-body-bg: #212529;
-    --bs-body-bg-rgb: 33, 37, 41;
+    --bs-body-color: @text;
+    --bs-body-color-rgb: #lib.rgbify(@text) [];
+    --bs-body-bg: @mantle !important;
+    --bs-body-bg-rgb: #lib.rgbify(@mantle) [];
     --bs-emphasis-color: #fff;
     --bs-emphasis-color-rgb: 255, 255, 255;
     --bs-secondary-color: rgba(222, 226, 230, 0.75);
     --bs-secondary-color-rgb: 222, 226, 230;
-    --bs-secondary-bg: #343a40;
-    --bs-secondary-bg-rgb: 52, 58, 64;
+    --bs-secondary-bg: @base !important;
+    --bs-secondary-bg-rgb: #lib.rgbify(@base) [] !important;
     --bs-tertiary-color: rgba(222, 226, 230, 0.5);
     --bs-tertiary-color-rgb: 222, 226, 230;
     --bs-tertiary-bg: #2b3035;
@@ -61,12 +61,12 @@
     --bs-light-text-emphasis: #f8f9fa;
     --bs-dark-text-emphasis: #dee2e6;
     --bs-primary-bg-subtle: #161d33;
-    --bs-secondary-bg-subtle: #1b1b1b;
+    --bs-secondary-bg-subtle: @mantle;
     --bs-success-bg-subtle: #192616;
     --bs-info-bg-subtle: #032830;
     --bs-warning-bg-subtle: #332701;
     --bs-danger-bg-subtle: #2c0b0e;
-    --bs-light-bg-subtle: #343a40;
+    --bs-light-bg-subtle: @mantle !important;
     --bs-dark-bg-subtle: #1a1d20;
     --bs-primary-border-subtle: #435899;
     --bs-secondary-border-subtle: #525252;
@@ -75,35 +75,162 @@
     --bs-warning-border-subtle: #997404;
     --bs-danger-border-subtle: #842029;
     --bs-light-border-subtle: #495057;
-    --bs-dark-border-subtle: #343a40;
+    --bs-dark-border-subtle: @base;
     --bs-heading-color: inherit;
-    --bs-link-color: #a9beff;
-    --bs-link-hover-color: #bacbff;
-    --bs-link-color-rgb: 169, 190, 255;
-    --bs-link-hover-color-rgb: 186, 203, 255;
+    --bs-link-color: @blue;
+    --bs-link-hover-color: @sapphire;
+    --bs-link-color-rgb: #lib.rgbify(@blue) [];
+    --bs-link-hover-color-rgb: #lib.rgbify(@sapphire) [];
     --bs-code-color: #e685b5;
     --bs-highlight-color: #dee2e6;
     --bs-highlight-bg: #664d03;
     --bs-border-color: #495057;
     --bs-border-color-translucent: rgba(255, 255, 255, 0.15);
-    --bs-form-valid-color: @green;
-    --bs-form-valid-border-color: @green;
+    --bs-form-valid-color: @green !important;
+    --bs-form-valid-border-color: @green !important;
     --bs-form-invalid-color: #ea868f;
-    --bs-form-invalid-border-color: #ea868f
+    --bs-form-invalid-border-color: #ea868f;
 
     nav.primary #edit_tab .btn-outline-primary {
       --bs-btn-color: @green !important;
       --bs-btn-border-color: @green !important;
-      --bs-btn-hover-color: @base !important;
+      --bs-btn-hover-color: @mantle !important;
       --bs-btn-hover-bg: @green !important;
       --bs-btn-hover-border-color: @green !important;
-      --bs-btn-focus-shadow-rgb: 126, 188, 111;
-      --bs-btn-active-color: @base !important;
+      --bs-btn-focus-shadow-rgb: @green;
+      --bs-btn-active-color: @mantle !important;
       --bs-btn-active-bg: @green !important;
       --bs-btn-active-border-color: @green !important;
-      --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+      --bs-btn-active-shadow: inset 0 3px 5px rgba(#lib.rgbify(@crust) [], 0.125);
       --bs-btn-disabled-color: @green !important;
       --bs-btn-disabled-border-color: @green !important;
+
+      --marker-red: @red !important;
+      --marker-green: @green !important;
+      --marker-blue: @blue !important;
+    }
+
+    .btn-primary {
+      --bs-btn-color: @base !important;
+      --bs-btn-bg: @blue !important;
+      --bs-btn-border-color: @blue !important;
+      --bs-btn-hover-color: @base !important;
+      --bs-btn-hover-bg: @sapphire !important;
+      --bs-btn-hover-border-color: darken(@sapphire, 1%);
+      --bs-btn-focus-shadow-rgb: rgb(133, 162, 255);
+      --bs-btn-active-color: @base !important;
+      --bs-btn-active-bg: @blue;
+      --bs-btn-active-border-color: darken(@blue, 1%);
+      --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+      --bs-btn-disabled-color: @base !important;
+      --bs-btn-disabled-bg: @blue !important;
+      --bs-btn-disabled-border-color: @blue !important;
+    }
+
+    [data-bs-theme=light] {
+      --bs-blue: @blue;
+      --bs-indigo: darken(@mauve, 5%);
+      --bs-purple: @mauve;
+      --bs-pink: @pink;
+      --bs-red: @red;
+      --bs-orange: @peach;
+      --bs-yellow: @yellow;
+      --bs-green: @green;
+      --bs-teal: @teal;
+      --bs-cyan: @sky;
+      --bs-black: #000;
+      --bs-white: #fff;
+      --bs-gray: #6c757d;
+      --bs-gray-dark: #343a40;
+      --bs-gray-100: #f8f9fa;
+      --bs-gray-200: #e9ecef;
+      --bs-gray-300: #dee2e6;
+      --bs-gray-400: #ced4da;
+      --bs-gray-500: #adb5bd;
+      --bs-gray-600: #6c757d;
+      --bs-gray-700: #495057;
+      --bs-gray-800: #343a40;
+      --bs-gray-900: #212529;
+      --bs-primary: @blue;
+      --bs-secondary: #888;
+      --bs-success: #7ebc6f;
+      --bs-info: @sapphire;
+      --bs-warning: @yellow;
+      --bs-danger: @red;
+      --bs-light: #f8f9fa;
+      --bs-dark: #212529;
+      --bs-primary-rgb: 112, 146, 255;
+      --bs-secondary-rgb: 136, 136, 136;
+      --bs-success-rgb: 126, 188, 111;
+      --bs-info-rgb: 13, 202, 240;
+      --bs-warning-rgb: 255, 193, 7;
+      --bs-danger-rgb: 220, 53, 69;
+      --bs-light-rgb: 248, 249, 250;
+      --bs-dark-rgb: 33, 37, 41;
+      --bs-primary-text-emphasis: #2d3a66;
+      --bs-secondary-text-emphasis: #363636;
+      --bs-success-text-emphasis: #324b2c;
+      --bs-info-text-emphasis: #055160;
+      --bs-warning-text-emphasis: #664d03;
+      --bs-danger-text-emphasis: #58151c;
+      --bs-light-text-emphasis: #495057;
+      --bs-dark-text-emphasis: #495057;
+      --bs-primary-bg-subtle: #e2e9ff;
+      --bs-secondary-bg-subtle: #e7e7e7;
+      --bs-success-bg-subtle: #e5f2e2;
+      --bs-info-bg-subtle: #cff4fc;
+      --bs-warning-bg-subtle: #fff3cd;
+      --bs-danger-bg-subtle: #f8d7da;
+      --bs-light-bg-subtle: #fcfcfd;
+      --bs-dark-bg-subtle: #ced4da;
+      --bs-primary-border-subtle: #c6d3ff;
+      --bs-secondary-border-subtle: #cfcfcf;
+      --bs-success-border-subtle: #cbe4c5;
+      --bs-info-border-subtle: #9eeaf9;
+      --bs-warning-border-subtle: #ffe69c;
+      --bs-danger-border-subtle: #f1aeb5;
+      --bs-light-border-subtle: #e9ecef;
+      --bs-dark-border-subtle: #adb5bd;
+      --bs-white-rgb: 255, 255, 255;
+      --bs-black-rgb: 0, 0, 0;
+      --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+      --bs-body-color: #212529;
+      --bs-body-color-rgb: 33, 37, 41;
+      --bs-body-bg: #fff;
+      --bs-body-bg-rgb: 255, 255, 255;
+      --bs-emphasis-color: #000;
+      --bs-emphasis-color-rgb: 0, 0, 0;
+      --bs-secondary-color: rgba(33, 37, 41, 0.75);
+      --bs-secondary-color-rgb: 33, 37, 41;
+      --bs-secondary-bg: #e9ecef;
+      --bs-secondary-bg-rgb: 233, 236, 239;
+      --bs-tertiary-color: rgba(33, 37, 41, 0.5);
+      --bs-tertiary-color-rgb: 33, 37, 41;
+      --bs-tertiary-bg: #f8f9fa;
+      --bs-tertiary-bg-rgb: 248, 249, 250;
+      --bs-heading-color: inherit;
+      --bs-link-color: #24d;
+      --bs-link-color-rgb: 34, 68, 221;
+      --bs-link-hover-color: #24d;
+      --bs-link-hover-color-rgb: 34, 68, 221;
+      --bs-code-color: #d63384;
+      --bs-highlight-color: #212529;
+      --bs-highlight-bg: #fff3cd;
+      --bs-border-color: #dee2e6;
+      --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
+      --bs-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+      --bs-box-shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+      --bs-box-shadow-lg: 0 1rem 3rem rgba(0, 0, 0, 0.175);
+      --bs-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
+      --bs-focus-ring-color: rgba(112, 146, 255, 0.25);
+      --bs-form-valid-color: #7ebc6f;
+      --bs-form-valid-border-color: #7ebc6f;
+      --bs-form-invalid-color: #dc3545;
+      --bs-form-invalid-border-color: #dc3545
+    }
+
+    .donate-attr {
+      color: @green !important;
     }
   }
 }
