fix: theme destructive button correctly

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -114,9 +114,9 @@
 		--yq-red-100: rgba(254, 226, 226, 1);
 		--yq-red-200: rgba(254, 202, 202, 1);
 		--yq-red-300: rgba(252, 165, 165, 1);
-		--yq-red-400: rgba(248, 113, 113, 1);
-		--yq-red-500: rgba(239, 68, 68, 1); */
-		--yq-red-600: @red !important;
+		--yq-red-400: rgba(248, 113, 113, 1); */
+		--yq-red-500: @red;
+		--yq-red-600: @red;
 		/* --yq-red-700: rgba(185, 28, 28, 1);
 		--yq-red-800: rgba(153, 27, 27, 1);
 		--yq-red-900: rgba(127, 29, 29, 1);
@@ -226,6 +226,10 @@
 		  color: @base !important;
 		}
 
+		button.bg-destructive:hover {
+		  color: @base;
+		}
+
 		.text-text-secondary, .text-muted-foreground, .hover\:text-accent-foreground:hover, .peer\/menu-button:hover, .data-\[active\=true\]\:text-sidebar-accent-foreground[data-active="true"], .focus\:text-accent-foreground:hover, [data-sidebar="menu-sub-button"]:hover {
 		  color: @subtext1 !important;
 		}
@@ -252,6 +256,11 @@
 
 		[data-sidebar="group-label"] svg path[fill="white"], svg path[fill="black"], svg path[fill="#131B35"], svg path[fill="#292E47"] {
 			fill: @text;
+		}
+
+		.data-\[state\=checked\]\:bg-\[\#09090b\][data-state="checked"], button.data-\[state\=indeterminate\]\:bg-primary[data-state="indeterminate"], .border.data-\[state\=checked\]\:bg-primary[data-state="checked"] {
+		  background-color: @text;
+		  color: @base;
 		}
 
 		svg path[fill="#F44336"] {
