fix: button incorrectly themed

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -226,8 +226,14 @@
 		  color: @base !important;
 		}
 
-		button.bg-destructive:hover {
+		button.bg-destructive {
+		  background-color: @red !important;
 		  color: @base;
+		}
+
+		button.bg-destructive:hover {
+			background-color: @maroon !important;
+			color: @base;
 		}
 
 		.text-text-secondary, .text-muted-foreground, .hover\:text-accent-foreground:hover, .peer\/menu-button:hover, .data-\[active\=true\]\:text-sidebar-accent-foreground[data-active="true"], .focus\:text-accent-foreground:hover, [data-sidebar="menu-sub-button"]:hover {
