fix(chess.com): primary buttons

--- a/styles/chess.com/catppuccin.user.less
+++ b/styles/chess.com/catppuccin.user.less
@@ -72,10 +72,12 @@
     --color-border-subtle: @overlay2;
     --color-border-selected: @accent;
 
+    --color-green-200: lighten(@accent, 5%);
     --color-green-300: @accent;
+    --color-green-400: darken(@accent, 5%);
+
     --color-red-300: @red; /* Danger */
     --color-red-400: @red; /* Danger */
-    --color-green-400: @green; /* Success */
 
     /* Links */
     --color-blue-200: @sapphire;
