fix(chess.com): outside board coordinates

--- a/styles/chess.com/catppuccin.user.less
+++ b/styles/chess.com/catppuccin.user.less
@@ -614,11 +614,16 @@
         background-image: url("data:image/svg+xml,@{board}");
       }
 
+      /* Coordinates - Inside */
       .coordinate-light {
         fill: @dark-cell;
       }
       .coordinate-dark {
         fill: @light-cell;
+      }
+      /* Coordinates - Outside */
+      .coordinate-grey {
+        fill: @subtext0;
       }
     }
 
