Push big selector change, and specificity for svg paths etc.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/vgen/catppuccin.user.less
+++ b/styles/vgen/catppuccin.user.less
@@ -241,7 +241,7 @@
 
     // BASE OVERRIDES
     :is(.iiSXNi, .ewnLhi) > .formLabel .formField + svg,
-    .MyVSONAsSection__GuestContainer-sc-f6d18038-0 p,
+    [class*="MyVSONAsSection__GuestContainer-sc"] p,
     .eINUqO > .formLabel .downArrow,
     .hLuxbv :is(.alertMessageTextContainer, .alertMessageIconContainer) {
       color: @base !important;
@@ -437,9 +437,9 @@
     // SURFACE0 BUTTONS
     .uploadButtonContainer :is(.uploadButton, .removeButton),
     .hcPCOV,
-    .ImageCreditTag__Container-sc-22eafeb2-0,
+    [class*="ImageCreditTag__Container-sc"],
     .reviewButton,
-    .ChatChannelPreviewOptionsMenu__UserOption-sc-a149b0b1-2,
+    [class*="ChatChannelPreviewOptionsMenu__UserOption-sc"],
     .formLabel button.formField,
     .dgAcRG,
     .filterMenuLink > a, // These are filtermenulinks that tp instead of toggle.
@@ -540,11 +540,11 @@
     // MODAL HEADER BUTTONS
     .dKBVwa {
       svg.headerIcon {
-        :not(button, button *) {
+        * {
           color: @text !important;
         }
 
-        :not(button) svg {
+        svg {
           path, path[fill] {
             fill: @text !important;
           }
@@ -555,11 +555,11 @@
         }
 
         &:hover {
-          :not(button, button *) {
+          * {
             color: @accent !important;
           }
 
-          :not(button) svg {
+          svg {
             path, path[fill] {
               fill: @accent !important;
             }
@@ -580,7 +580,7 @@
     table.tableList
       tr.tableListRow
       td.tableListData
-      .IconButton__ButtonElement-sc-13f69b7e-0 {
+      [class*="IconButton__ButtonElement-sc"] {
       background-image: unset !important;
       background-color: transparent !important;
 
@@ -597,11 +597,11 @@
     .eNKZtI {
       background-image: var(--custom-green-radial-gradient) !important;
 
-      :not(button, button *) {
+      * {
         color: @base !important;
       }
 
-      :not(button) svg {
+      svg {
         path, path[fill] {
           fill: @base !important;
         }
@@ -615,11 +615,11 @@
     // CUSTOM ACCENT BUTTONS
     .socials .socialIcon,
     .hXZCZF > li > a {
-      :not(button, button *) {
+      * {
         color: @subtext0 !important;
       }
 
-      :not(button) svg {
+      svg {
         path, path[fill] {
           fill: @subtext0 !important;
         }
@@ -629,8 +629,10 @@
         }
       }
 
-      &:hover :not(button, button *) {
-        color: @accent !important;
+      &:hover {
+        * {
+          color: @accent !important;
+        }
 
         path, path[fill] {
           fill: @accent !important;
@@ -642,11 +644,11 @@
       }
 
       &:is(:active, :focus) {
-        :not(button, button *) {
+        * {
           color: darken(@accent, 5%) !important;
         }
 
-        :not(button) svg {
+        svg {
           path, path[fill] {
             fill: darken(@accent, 5%) !important;
           }
@@ -716,7 +718,7 @@
     }
 
     .emptyRow,
-    .MyVSONAsSection__GuestContainer-sc-f6d18038-0 button {
+    [class*="MyVSONAsSection__GuestContainer-sc"] button {
       background-image: unset !important;
       background-color: transparent !important;
     }
@@ -795,7 +797,7 @@
         color: @text !important;
         background-color: @surface0 !important;
 
-        .SortDropdown__OptionText-sc-5d6d1713-4 {
+        [class*="SortDropdown__OptionText-sc"] {
           &:hover {
             background-color: @surface1 !important;
           }
@@ -817,11 +819,11 @@
       }
     }
 
-    .SortDropdown__FloatingContainer-sc-5d6d1713-3 {
+    [class*="SortDropdown__FloatingContainer-sc"] {
       color: @text !important;
       background-color: @surface0 !important;
 
-      .SortDropdown__OptionText-sc-5d6d1713-4 {
+      [class*="SortDropdown__OptionText-sc"] {
         &:hover {
           background-color: @surface1 !important;
         }
@@ -844,11 +846,11 @@
     .innerSlider .thumb {
       background-color: @accent !important;
 
-      :not(button, button *) {
+      * {
         color: @base !important;
       }
 
-      :not(button) svg {
+      svg {
         path, path[fill] {
           fill: @base !important;
         }
@@ -905,11 +907,11 @@
         &.xHcof {
           background-color: @accent !important;
 
-          :not(button, button *) {
+          * {
             color: @base !important;
           }
 
-          :not(button) svg {
+          svg {
             path, path[fill] {
               fill: @base !important;
             }
@@ -932,11 +934,11 @@
       &.dpyhEo {
         background-color: @text !important;
 
-        :not(button, button *) {
+        * {
           color: @base !important;
         }
 
-        :not(button) svg {
+        svg {
           path, path[fill] {
             fill: @base !important;
           }
@@ -955,11 +957,11 @@
       &.eBYodn {
         background-color: @base !important;
 
-        :not(button, button *) {
+        * {
           color: @text !important;
         }
 
-        :not(button) svg {
+        svg {
           path, path[fill] {
             fill: @text !important;
           }
@@ -1002,11 +1004,11 @@
       background-color: @surface0 !important;
       border-color: @overlay0 !important;
 
-      :not(button, button *) {
+      * {
         color: @text !important;
       }
 
-      :not(button) svg {
+      svg {
         path, path[fill] {
           fill: @text !important;
         }
@@ -1029,11 +1031,11 @@
         background-color: @accent !important;
         border-color: @accent !important;
 
-        :not(button, button *) {
+        * {
           color: @base !important;
         }
 
-        :not(button) svg {
+        svg {
           path, path[fill] {
             fill: @base !important;
           }
@@ -1063,11 +1065,11 @@
           background-color: @surface0 !important;
           border-color: @overlay0 !important;
 
-          :not(button, button *) {
+          * {
             color: @text !important;
           }
 
-          :not(button) svg {
+          svg {
             path, path[fill] {
               fill: @text !important;
             }
@@ -1094,11 +1096,11 @@
           background-color: @accent !important;
           border-color: @accent !important;
 
-          :not(button, button *) {
+          * {
             color: @base !important;
           }
 
-          :not(button) svg {
+          svg {
             path, path[fill] {
               fill: @base !important;
             }
@@ -1119,7 +1121,7 @@
       }
     }
 
-    .BookmarkServiceBadge__Container-sc-c771ec8c-0 {
+    [class*="BookmarkServiceBadge__Container-sc"] {
       background-color: @surface1 !important;
       border-color: @overlay0 !important;
 
@@ -1294,7 +1296,7 @@
     }
 
     // BUBBLES
-    .AnnouncementBubble__Bubble-sc-c8b6e5ad-1 {
+    [class*="AnnouncementBubble__Bubble-sc"] {
       background-color: @surface0 !important;
     }
 
@@ -1314,18 +1316,18 @@
     }
 
     // SURFACE0 SECTIONS
-    .ServiceListGalleryCard__Card-sc-13b099d2-0,
+    [class*="ServiceListGalleryCard__Card-sc"],
     .gOwqMi,
     .jpAIoA,
     .realContainer,
     .iORFFF,
     .cNoQco,
-    .ChatModal__Container-sc-732b8377-0,
+    [class*="ChatModal__Container-sc"],
     .xzFMP,
     .cRsFty,
     .requestForm,
     .serviceRequestFormContainer,
-    .ModalBase__ModalStyle-sc-cf8b5bd2-1,
+    [class*="ModalBase__ModalStyle-sc"],
     .ljJZpn,
     .iFmoSC,
     .jPgPNs,
@@ -1972,7 +1974,7 @@
     }
 
     // TABS
-    .Tabs__Tab-sc-df5c1d53-3 {
+    [class*="Tabs__Tab-sc"] {
       .tabTitle {
         color: @subtext0 !important;
       }
