whoops deno task lint:fix and deno fmt.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/vgen/catppuccin.user.less
+++ b/styles/vgen/catppuccin.user.less
@@ -2305,7 +2305,7 @@
     );
     --theme-GRADIENT-HOLO: linear-gradient(
       225deg,
-      #ffbb00 5.21%,
+      #fb0 5.21%,
       #b8ff26 23.44%,
       #2afe67 39.06%,
       #1c85ff 55.21%,
@@ -2458,9 +2458,9 @@
     --theme-ELEVATION-OUTLINE: 4px 4px 0 rgba(255, 255, 255, 1);
     --theme-resolveColours: e=>e?u.default.colours:f;
     --theme-resolveShadows: e=>e?u.default.shadows:c;
-    --theme-breakpoints: [object Object];
-    --theme-typography: [object Object];
-    --theme-zIndex: [object Object];
+    --theme-breakpoints: [object object];
+    --theme-typography: [object object];
+    --theme-zIndex: [object object];
     color-scheme: dark;
     color: rgb(255, 255, 255);
     fill: rgb(255, 255, 255);
